--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "nextjs-toploader": "^3.9.17",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-redux": "^9.2.0",
